force-app/main/default/objects/Personal_Shopping_Preference__c/Personal_Shopping_Preference__c.object-meta.xml
<CustomObject>
    <label>Personal Shopping Preference</label>
    <nameField>
        <displayFormat>PSP-{000000}</displayFormat>
        <label>Personal Shopping Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personal Shopping Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>