force-app/main/default/objects/Personal_Shopping_Preference__c/fields/Body_Shape__c.field-meta.xml
<CustomField>
    <fullName>Body_Shape__c</fullName>
    <description>The guest&apos;s body shape</description>
    <inlineHelpText>The guest&apos;s body shape</inlineHelpText>
    <label>Body Shape</label>
    <length>255</length>
    <type>Text</type>
</CustomField>