force-app/main/default/objects/Personal_Shopping_Preference__c/fields/Body_Size__c.field-meta.xml
<CustomField>
    <fullName>Body_Size__c</fullName>
    <description>The guest&apos;s body size</description>
    <inlineHelpText>The guest&apos;s body size</inlineHelpText>
    <label>Body Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>