force-app/main/default/objects/Personal_Shopping_Preference__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>What is the guests budget for spend?</description>
    <inlineHelpText>What is the guests budget for spend?</inlineHelpText>
    <label>Budget</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>