force-app/main/default/objects/Personal_Shopping_Preference__c/fields/Colouring__c.field-meta.xml
<CustomField>
    <fullName>Colouring__c</fullName>
    <description>The guests colouring</description>
    <inlineHelpText>The guests colouring</inlineHelpText>
    <label>Colouring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>