force-app/main/default/objects/Personal_Shopping_Preference__c/fields/Colours__c.field-meta.xml
<CustomField>
    <fullName>Colours__c</fullName>
    <label>Colours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>