force-app/main/default/objects/Personal_Shopping_Preference__c/fields/Donts__c.field-meta.xml
<CustomField>
    <fullName>Donts__c</fullName>
    <description>Things that we should NOT DO for the guest</description>
    <inlineHelpText>Things that we should NOT DO for the guest</inlineHelpText>
    <label>Donts</label>
    <length>64768</length>
    <type>LongTextArea</type>
</CustomField>