force-app/main/default/objects/Personal_Shopping_Preference__c/fields/Dos__c.field-meta.xml
<CustomField>
    <fullName>Dos__c</fullName>
    <description>Things that we can DO for the guest</description>
    <inlineHelpText>Things that we can DO for the guest</inlineHelpText>
    <label>Dos</label>
    <length>64768</length>
    <type>LongTextArea</type>
</CustomField>