force-app/main/default/objects/Personal_Shopping_Preference__c/fields/Expected_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Expected_Frequency__c</fullName>
    <description>How often is the guest expected to use the Personal Shopping service?</description>
    <inlineHelpText>How often is the guest expected to use the Personal Shopping service?</inlineHelpText>
    <label>Expected Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One off</fullName>
            </value>
            <value>
                <fullName>Every 3 months</fullName>
            </value>
            <value>
                <fullName>Every 6 months</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>