force-app/main/default/objects/Personal_Shopping_Preference__c/fields/Expected_Frequency_Details__c.field-meta.xml
<CustomField>
    <fullName>Expected_Frequency_Details__c</fullName>
    <description>Other expected frequency details</description>
    <inlineHelpText>Other expected frequency details</inlineHelpText>
    <label>Expected Frequency Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>