force-app/main/default/objects/Personal_Shopping_Preference__c/fields/External_Personal_Shopping__c.field-meta.xml
<CustomField>
    <fullName>External_Personal_Shopping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the Guest use Personal Shopping Elsewhere?</description>
    <inlineHelpText>Does the Guest use Personal Shopping Elsewhere?</inlineHelpText>
    <label>External Personal Shopping</label>
    <type>Checkbox</type>
</CustomField>