force-app/main/default/objects/Personal_Shopping_Preference__c/fields/External_Personal_Shopping_Details__c.field-meta.xml
<CustomField>
    <fullName>External_Personal_Shopping_Details__c</fullName>
    <description>If the Guest uses Personal Shopping Elsewhere, then where?</description>
    <inlineHelpText>If the Guest uses Personal Shopping Elsewhere, then where?</inlineHelpText>
    <label>External Personal Shopping Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>