force-app/main/default/objects/Personal_Shopping_Preference__c/fields/Fabrics__c.field-meta.xml
<CustomField>
    <fullName>Fabrics__c</fullName>
    <description>The guests fashion fabric preferences</description>
    <inlineHelpText>The guests fashion fabric preferences</inlineHelpText>
    <label>Fabrics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>