force-app/main/default/objects/Personal_Shopping_Preference__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>How the guest heard about Personal Shopping</description>
    <inlineHelpText>How did the guest hear about Personal Shopping?</inlineHelpText>
    <label>Lead Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
            <value>
                <fullName>VR Website</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Recommendation</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Own Contact</fullName>
            </value>
            <value>
                <fullName>TIC/Hosts</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>