force-app/main/default/objects/Personal_Shopping_Preference__c/fields/Lead_Source_Details__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Details__c</fullName>
    <description>If Other, Please supply a value</description>
    <inlineHelpText>If Other, Please supply a value</inlineHelpText>
    <label>Lead Source Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>