force-app/main/default/objects/Personal_Shopping_Preference__c/fields/Lifestyle__c.field-meta.xml
<CustomField>
    <fullName>Lifestyle__c</fullName>
    <description>The Guests Lifestyle</description>
    <inlineHelpText>The Guests Lifestyle</inlineHelpText>
    <label>Lifestyle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>