force-app/main/default/objects/Personal_Shopping_Preference__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>64768</length>
    <type>LongTextArea</type>
</CustomField>