force-app/main/default/objects/Personal_Shopping_Preference__c/fields/Shoe_Size__c.field-meta.xml
<CustomField>
    <fullName>Shoe_Size__c</fullName>
    <label>Shoe Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>