force-app/main/default/objects/Personal_Shopping_Preference__c/fields/Size_Type__c.field-meta.xml
<CustomField>
    <fullName>Size_Type__c</fullName>
    <description>The guests size type</description>
    <inlineHelpText>The guests size type</inlineHelpText>
    <label>Size Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>European</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>