force-app/main/default/objects/Personal_Shopping_Preference__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <description>The guests fashion style</description>
    <inlineHelpText>The guests fashion style</inlineHelpText>
    <label>Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>