force-app/main/default/objects/Personal_Shopping_Preference__c/fields/VIP_Guest__c.field-meta.xml
<CustomField>
    <fullName>VIP_Guest__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The VIP guest that is making use of the Personal shopping service</description>
    <inlineHelpText>The VIP guest that is making use of the Personal shopping service</inlineHelpText>
    <label>VIP Guest</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only VIP guests can have Personal Shopping preferences</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>VIP Guest</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Personal Shopping Preferences</relationshipLabel>
    <relationshipName>Personal_Shopping_Preferences</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>